clusters/cluster0/kubernetes/apps/media/calibre/app/calibre-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: calibre
  name: calibre
  namespace: media
spec:
  template:
    metadata:
      labels:
        app: calibre
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-03
      containers:
        - image: lscr.io/linuxserver/calibre-web:latest
          imagePullPolicy: Always
          name: calibre
          ports:
          - name: calibre-port
            containerPort: 8083
            protocol: TCP
          volumeMounts:
          - name: calibre-config
            mountPath: /calibre/config
          - name: media-pvc
            mountPath: /books
          resources:
            requests:
              memory: 350Mi
              cpu: 75m
            limits:
              memory: 500Mi
              cpu: 500m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: calibre-config
        persistentVolumeClaim:
          claimName: "calibre-config"
      - name: media-pvc
        persistentVolumeClaim:
          claimName: media-pvc
  selector:
    matchLabels:
      app: calibre
