clusters/cluster0/kubernetes/apps/media/calibre/app/calibre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: calibre
  ports:
     # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8083
      protocol: TCP
      targetPort: 8083
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      # nodePort: 31400
