clusters/cluster0/kubernetes/apps/media/calibre/app/calibre-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: biggs.dog
spec:
  ingressClassName: external
  rules:
  - host: calibre.biggs.dog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: calibre-service
            port:
              number: 8083
